fix: mobile overflow and text alignment location paeg

--- a/scss/components/_locationCard.scss
+++ b/scss/components/_locationCard.scss
@@ -14,6 +14,10 @@
   text-decoration: none;
 }
 
+.location-card--text:hover {
+  color: white;
+}
+
 .location-card--overlay {
   position: absolute;
   display: flex;
