--- a/scss/components/_locationPage.scss
+++ b/scss/components/_locationPage.scss
@@ -2,89 +2,95 @@
 @use '../design-tokens/breakpoints';
 
 .location--page-container {
-    @include mixins.flex-column-centered();
+  @include mixins.flex-column-centered();
 }
 
 .location--background-image-container {
-    height: 100vh;
-    width: 100vw;
-    max-width: 100%;
-    overflow: hidden;
-    @include mixins.flex-column-centered();
+  height: 100vh;
+  width: 100vw;
+  max-width: 100%;
+  overflow: hidden;
+  @include mixins.flex-column-centered();
 }
 
 .location--text-container {
-    @include mixins.flex-column-centered();
-    padding: 30px 50px 30px 50px;
-    background-color: rgba(0, 0, 0, 0.3);
+  @include mixins.flex-column-centered();
+  padding: 30px 50px 30px 50px;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .location--brochure-container {
-    @include mixins.flex-column-centered();
-    width: 80%;
+  @include mixins.flex-column-centered();
+  width: 80%;
 }
 
 .location--background-image {
-    object-fit: cover;
-    z-index: -1;
+  object-fit: cover;
+  z-index: -1;
 }
 
 .location--location-description {
-    color: white;
-    font-size: 18px;
-    font-weight: 500px;
+  color: white;
+  font-size: 18px;
+  font-weight: 500px;
 }
 
 .location--location-name {
-    color: white;
-    font-size: 50px;
-    font-weight: 700;
+  color: white;
+  font-size: 50px;
+  font-weight: 700;
 }
 
 .divider {
-    border: 1px solid gray;
-    height: 1px;
-    width: 80%;
+  border: 1px solid gray;
+  height: 1px;
+  width: 80%;
 }
 
 .location--brochure-header {
-    font-size: 40px;
-    margin: 30px;
+  font-size: 40px;
+  margin: 30px;
 }
 
 .location--brochure-city-attributes {
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  @media (min-width: breakpoints.$md) {
+    flex-direction: row;
+  }
 }
 
 .location--brochure-attribute-container {
-    @include mixins.flex-column-centered();
-    padding: 15px;
-    margin: 30px;
+  @include mixins.flex-column-centered();
+  padding: 15px;
+  text-align: center;
+  margin: 30px;
 }
 
 .location--brochure-subheader {
-    font-size: 30px;
-    margin: 30px;
+  font-size: 30px;
+  margin: 30px;
 }
 
 .location--brochure-activity-container {
-    @include mixins.flex-column-centered();
+  @include mixins.flex-column-centered();
+  text-align: center;
 }
 
 .location--brochure-activity-title {
-    font-weight: 500;
-    margin: 25px 0 10px 0;
+  font-weight: 500;
+  margin: 25px 0 10px 0;
 }
 
 .location--brochure-activity-description-container {
-    @include mixins.flex-column-centered();
+  @include mixins.flex-column-centered();
 }
 
 .location--brochure-activity-description-piece {
-    padding: 3px;
+  padding: 3px;
 }
 
 .location--brochure-description {
-    text-align: center;
-    margin-bottom: 50px;
+  text-align: center;
+  margin-bottom: 50px;
 }
